--- a/assets/css/app-no-gradients.css
+++ b/assets/css/app-no-gradients.css
@@ -2478,27 +2478,16 @@ ul.icons li .glyphicon-large:before {
 .glyphicon-caret-down:before {
   content: "\e11a";
 }
-.dropup,
-.dropdown {
-  position: relative;
-}
-.dropdown-toggle:active,
-.open .dropdown-toggle {
-  outline: 0;
-}
 .caret {
   display: inline-block;
   width: 0;
   height: 0;
-  vertical-align: top;
+  margin-left: 2px;
+  vertical-align: middle;
   border-top: 4px solid #000;
   border-right: 4px solid transparent;
   border-left: 4px solid transparent;
   content: "";
-}
-.dropdown .caret {
-  margin-top: 8px;
-  margin-left: 2px;
 }
 .dropdown-menu {
   position: absolute;
@@ -2572,6 +2561,9 @@ ul.icons li .glyphicon-large:before {
 }
 .open > .dropdown-menu {
   display: block;
+}
+.open > a {
+  outline: 0;
 }
 .pull-right > .dropdown-menu {
   right: 0;
@@ -2844,6 +2836,7 @@ button.close {
   clear: both;
 }
 .nav > li {
+  position: relative;
   display: block;
 }
 .nav > li > a {
@@ -2866,8 +2859,21 @@ button.close {
   background-color: transparent;
   cursor: default;
 }
-.nav > li+ .nav-header {
+.nav > li + .nav-header {
   margin-top: 9px;
+}
+.nav.open > a,
+.nav.open > a:hover,
+.nav.open > a:focus {
+  color: #fff;
+  background-color: #428bca;
+  border-color: #428bca;
+}
+.nav.open > a .caret,
+.nav.open > a:hover .caret,
+.nav.open > a:focus .caret {
+  border-top-color: #fff;
+  border-bottom-color: #fff;
 }
 .nav > .pull-right {
   float: right;
@@ -2982,6 +2988,19 @@ button.close {
 .tab-content > .active,
 .pill-content > .active {
   display: block;
+}
+.nav .caret {
+  border-top-color: #428bca;
+  border-bottom-color: #428bca;
+}
+.nav a:hover .caret {
+  border-top-color: #2a6496;
+  border-bottom-color: #2a6496;
+}
+.nav-tabs .dropdown-menu {
+  margin-top: -1px;
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
 }
 .navbar {
   position: relative;
@@ -3117,24 +3136,24 @@ button.close {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
 }
-.navbar-nav li.dropdown > a:hover .caret,
-.navbar-nav li.dropdown > a:focus .caret {
+.navbar-nav > .dropdown > a:hover .caret,
+.navbar-nav > .dropdown > a:focus .caret {
   border-top-color: #333;
   border-bottom-color: #333;
 }
-.navbar-nav li.dropdown.open > .dropdown-toggle,
-.navbar-nav li.dropdown.active > .dropdown-toggle,
-.navbar-nav li.dropdown.open.active > .dropdown-toggle {
+.navbar-nav > .open > a,
+.navbar-nav > .open > a:hover,
+.navbar-nav > .open > a:focus {
   background-color: #d5d5d5;
   color: #555;
 }
-.navbar-nav li.dropdown > .dropdown-toggle .caret {
+.navbar-nav > .dropdown > a .caret {
   border-top-color: #777;
   border-bottom-color: #777;
 }
-.navbar-nav li.dropdown.open > .dropdown-toggle .caret,
-.navbar-nav li.dropdown.active > .dropdown-toggle .caret,
-.navbar-nav li.dropdown.open.active > .dropdown-toggle .caret {
+.navbar-nav > .open > a .caret,
+.navbar-nav > .open > a:hover .caret,
+.navbar-nav > .open > a:focus .caret {
   border-top-color: #555;
   border-bottom-color: #555;
 }
@@ -3187,23 +3206,23 @@ button.close {
 .navbar-inverse .navbar-toggle .icon-bar {
   background-color: #fff;
 }
-.navbar-inverse .navbar-nav li.dropdown.open > .dropdown-toggle,
-.navbar-inverse .navbar-nav li.dropdown.active > .dropdown-toggle,
-.navbar-inverse .navbar-nav li.dropdown.open.active > .dropdown-toggle {
+.navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .open > a:hover,
+.navbar-inverse .navbar-nav > .open > a:focus {
   background-color: #090909;
   color: #fff;
 }
-.navbar-inverse .navbar-nav li.dropdown > a:hover .caret {
+.navbar-inverse .navbar-nav > .dropdown > a:hover .caret {
   border-top-color: #fff;
   border-bottom-color: #fff;
 }
-.navbar-inverse .navbar-nav li.dropdown > .dropdown-toggle .caret {
+.navbar-inverse .navbar-nav > .dropdown > a .caret {
   border-top-color: #999999;
   border-bottom-color: #999999;
 }
-.navbar-inverse .navbar-nav li.dropdown.open > .dropdown-toggle .caret,
-.navbar-inverse .navbar-nav li.dropdown.active > .dropdown-toggle .caret,
-.navbar-inverse .navbar-nav li.dropdown.open.active > .dropdown-toggle .caret {
+.navbar-inverse .navbar-nav > .open > a .caret,
+.navbar-inverse .navbar-nav > .open > a:hover .caret,
+.navbar-inverse .navbar-nav > .open > a:focus .caret {
   border-top-color: #fff;
   border-bottom-color: #fff;
 }
@@ -3355,7 +3374,6 @@ button.close {
   box-shadow: inset 0 3px 5px rgba(0,0,0,0.125);
 }
 .btn .caret {
-  margin-top: 8px;
   margin-left: 0;
 }
 .btn-large .caret {
@@ -4459,61 +4477,61 @@ a.list-group-item.active > .badge,
   display: none;
   visibility: hidden;
 }
-.visible-phone {
+.visible-sm {
   display: inherit !important;
 }
-.visible-tablet {
+.visible-md {
   display: none !important;
 }
-.visible-desktop {
+.visible-lg {
   display: none !important;
 }
-.hidden-phone {
+.hidden-sm {
   display: none !important;
 }
-.hidden-tablet {
+.hidden-md {
   display: inherit !important;
 }
-.hidden-desktop {
+.hidden-lg {
   display: inherit !important;
 }
 @media (min-width: 768px) and (max-width: 991px) {
-  .visible-phone {
+  .visible-sm {
     display: none !important;
   }
-  .visible-tablet {
+  .visible-md {
     display: inherit !important;
   }
-  .visible-desktop {
+  .visible-lg {
     display: none !important;
   }
-  .hidden-phone {
+  .hidden-sm {
     display: inherit !important;
   }
-  .hidden-tablet {
+  .hidden-md {
     display: none !important;
   }
-  .hidden-desktop {
+  .hidden-lg {
     display: inherit !important;
   }
 }
 @media (min-width: 992px) {
-  .visible-phone {
+  .visible-sm {
     display: none !important;
   }
-  .visible-tablet {
+  .visible-md {
     display: none !important;
   }
-  .visible-desktop {
+  .visible-lg {
     display: inherit !important;
   }
-  .hidden-phone {
+  .hidden-sm {
     display: inherit !important;
   }
-  .hidden-tablet {
+  .hidden-md {
     display: inherit !important;
   }
-  .hidden-desktop {
+  .hidden-lg {
     display: none !important;
   }
 }
