--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,7 +233,7 @@ html {
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
-  line-height: 1.428;
+  line-height: 1.428571429;
   color: #333333;
   background-color: #ffffff;
 }
@@ -340,7 +340,6 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 500;
   line-height: 1.1;
 }
@@ -427,7 +426,7 @@ ol ul {
   margin-bottom: 0;
 }
 li {
-  line-height: 1.428;
+  line-height: 1.428571429;
 }
 .list-unstyled {
   margin-left: 0;
@@ -447,7 +446,7 @@ dl {
 }
 dt,
 dd {
-  line-height: 1.428;
+  line-height: 1.428571429;
 }
 dt {
   font-weight: bold;
@@ -514,7 +513,7 @@ blockquote p:last-child {
 }
 blockquote small {
   display: block;
-  line-height: 1.428;
+  line-height: 1.428571429;
   color: #999999;
 }
 blockquote small:before {
@@ -547,7 +546,7 @@ address {
   display: block;
   margin-bottom: 20px;
   font-style: normal;
-  line-height: 1.428;
+  line-height: 1.428571429;
 }
 code,
 pre {
@@ -569,7 +568,7 @@ pre {
   padding: 9.5px;
   margin: 0 0 10px;
   font-size: 13px;
-  line-height: 1.428;
+  line-height: 1.428571429;
   word-break: break-all;
   word-wrap: break-word;
   white-space: pre;
@@ -828,10 +827,6 @@ pre code {
   .container {
     max-width: 728px;
   }
-  .row {
-    margin-left: -15px;
-    margin-right: -15px;
-  }
 }
 @media screen and (min-width: 992px) {
   .container {
@@ -859,7 +854,7 @@ th {
 .table thead > tr > td,
 .table tbody > tr > td {
   padding: 8px;
-  line-height: 1.428;
+  line-height: 1.428571429;
   vertical-align: top;
   border-top: 1px solid #dddddd;
 }
@@ -1018,7 +1013,7 @@ legend {
   padding: 0;
   margin-bottom: 20px;
   font-size: 21px;
-  line-height: 1.1;
+  line-height: inherit;
   color: #333333;
   border: 0;
   border-bottom: 1px solid #e5e5e5;
@@ -1045,10 +1040,10 @@ input[type="search"],
 input[type="tel"],
 input[type="color"] {
   display: block;
-  min-height: 34px;
-  padding: 6px 9px;
+  min-height: 36px;
+  padding: 8px 12px;
   font-size: 14px;
-  line-height: 1.428;
+  line-height: 1.428571429;
   color: #555555;
   vertical-align: middle;
   background-color: #ffffff;
@@ -1056,10 +1051,31 @@ input[type="color"] {
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
   box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-  -webkit-transition: border-color linear .2s, box-shadow linear .2s;
-  -moz-transition: border-color linear .2s, box-shadow linear .2s;
-  -o-transition: border-color linear .2s, box-shadow linear .2s;
-  transition: border-color linear .2s, box-shadow linear .2s;
+  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  -moz-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+select:focus,
+textarea:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="date"]:focus,
+input[type="month"]:focus,
+input[type="time"]:focus,
+input[type="week"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="color"]:focus {
+  border-color: rgba(82,168,236,0.8);
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
 }
 input,
 select,
@@ -1083,27 +1099,6 @@ input[type="search"] {
 textarea {
   height: auto;
 }
-textarea:focus,
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus,
-input[type="date"]:focus,
-input[type="month"]:focus,
-input[type="time"]:focus,
-input[type="week"]:focus,
-input[type="number"]:focus,
-input[type="email"]:focus,
-input[type="url"]:focus,
-input[type="search"]:focus,
-input[type="tel"]:focus,
-input[type="color"]:focus {
-  border-color: rgba(82,168,236,0.8);
-  outline: 0;
-  outline: thin dotted \9;
-  -webkit-box-shadow: 0 0 8px rgba(82,168,236,0.6);
-  box-shadow: 0 0 8px rgba(82,168,236,0.6);
-}
 input[type="radio"],
 input[type="checkbox"] {
   margin: 4px 0 0;
@@ -1112,14 +1107,13 @@ input[type="checkbox"] {
 }
 select,
 input[type="file"] {
-  height: 34px;
-  line-height: 34px;
+  height: 36px;
+  line-height: 36px;
 }
 select[multiple],
 select[size] {
   height: auto;
 }
-select:focus,
 input[type="file"]:focus,
 input[type="radio"]:focus,
 input[type="checkbox"]:focus {
@@ -1200,7 +1194,7 @@ input[type="url"].input-large,
 input[type="search"].input-large,
 input[type="tel"].input-large,
 input[type="color"].input-large {
-  padding: 11px 14px;
+  padding: 14px 16px;
   font-size: 18px;
   border-radius: 6px;
 }
@@ -1220,8 +1214,8 @@ input[type="url"].input-small,
 input[type="search"].input-small,
 input[type="tel"].input-small,
 input[type="color"].input-small {
-  min-height: 26px;
-  padding: 2px 10px;
+  min-height: 30px;
+  padding: 5px 10px;
   font-size: 12px;
   border-radius: 3px;
 }
@@ -1300,29 +1294,6 @@ select:focus:invalid:focus {
   -webkit-box-shadow: 0 0 6px #f8b9b7;
   box-shadow: 0 0 6px #f8b9b7;
 }
-.form-actions {
-  padding: 20px 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border-top: 1px solid #e5e5e5;
-}
-.form-actions:before,
-.form-actions:after {
-  content: " ";
-  display: table;
-}
-.form-actions:after {
-  clear: both;
-}
-.form-actions:before,
-.form-actions:after {
-  content: " ";
-  display: table;
-}
-.form-actions:after {
-  clear: both;
-}
 .help-block {
   display: block;
   margin-top: 5px;
@@ -1364,7 +1335,7 @@ select:focus:invalid:focus {
   padding: 6px 8px;
   font-size: 14px;
   font-weight: normal;
-  line-height: 1.428;
+  line-height: 1.428571429;
   text-align: center;
   text-shadow: 0 1px 0 #fff;
   background-color: #eeeeee;
@@ -1372,12 +1343,12 @@ select:focus:invalid:focus {
   border-radius: 4px;
 }
 .input-group-addon.input-small {
-  padding: 2px 10px;
+  padding: 5px 10px;
   font-size: 12px;
   border-radius: 3px;
 }
 .input-group-addon.input-large {
-  padding: 11px 14px;
+  padding: 14px 16px;
   font-size: 18px;
   border-radius: 6px;
 }
@@ -1433,17 +1404,21 @@ select:focus:invalid:focus {
 .form-horizontal .row + .row {
   margin-top: 15px;
 }
-.form-horizontal .row-label {
+.form-horizontal .control-label {
   padding-top: 6px;
-  text-align: right;
+}
+@media (min-width: 768px) {
+  .form-horizontal .control-label {
+    text-align: right;
+  }
 }
 .btn {
   display: inline-block;
-  padding: 6px 12px;
+  padding: 8px 12px;
   margin-bottom: 0;
   font-size: 14px;
   font-weight: 500;
-  line-height: 1.428;
+  line-height: 1.428571429;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
@@ -1675,18 +1650,14 @@ fieldset[disabled] .btn-link:focus {
   text-decoration: none;
 }
 .btn-large {
-  padding: 11px 14px;
+  padding: 14px 16px;
   font-size: 18px;
   border-radius: 6px;
 }
 .btn-small {
-  padding: 2px 10px;
+  padding: 5px 10px;
   font-size: 12px;
-  border-radius: 3px;
-}
-.btn-mini {
-  padding: 0 6px;
-  font-size: 11px;
+  line-height: 1.5;
   border-radius: 3px;
 }
 .btn-block {
@@ -2690,7 +2661,7 @@ ul.icons li .glyphicon-large:before {
   padding: 3px 20px;
   clear: both;
   font-weight: normal;
-  line-height: 1.428;
+  line-height: 1.428571429;
   color: #333333;
   white-space: nowrap;
 }
@@ -2740,6 +2711,14 @@ ul.icons li .glyphicon-large:before {
 }
 .open > a {
   outline: 0;
+}
+.dropdown-backdrop {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: 990;
 }
 .pull-right > .dropdown-menu {
   right: 0;
@@ -2888,6 +2867,14 @@ a.list-group-item.active .list-group-item-text {
   border-bottom: 1px solid #dddddd;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
+}
+.panel-footer {
+  margin: 15px -15px -15px;
+  padding: 10px 15px;
+  background-color: #f5f5f5;
+  border-top: 1px solid #dddddd;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
 .panel-primary {
   border-color: #428bca;
@@ -3063,7 +3050,7 @@ button.close {
 }
 .nav-tabs > li > a {
   margin-right: 2px;
-  line-height: 1.428;
+  line-height: 1.428571429;
   border: 1px solid transparent;
   border-radius: 4px 4px 0 0;
 }
@@ -3136,7 +3123,7 @@ button.close {
   padding: 3px 15px;
   font-size: 11px;
   font-weight: bold;
-  line-height: 1.428;
+  line-height: 1.428571429;
   color: #999999;
   text-shadow: 0 1px 0 rgba(255,255,255,0.5);
   text-transform: uppercase;
@@ -3204,12 +3191,14 @@ button.close {
 }
 .navbar-nav {
   margin-top: 10px;
+  margin-bottom: 15px;
 }
 .navbar-nav > li > a {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 28px;
+  padding-bottom: 28px;
   color: #777777;
   line-height: 20px;
+  border-radius: 4px;
 }
 .navbar-nav > li > a:hover,
 .navbar-nav > li > a:focus {
@@ -3288,8 +3277,8 @@ button.close {
   margin-top: 4px;
 }
 .navbar-form {
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin-top: 21px;
+  margin-bottom: 21px;
 }
 .navbar-form input,
 .navbar-form select,
@@ -3411,9 +3400,13 @@ button.close {
   .navbar .nav {
     float: left;
     margin-top: 0;
+    margin-bottom: 0;
   }
   .navbar .nav > li {
     float: left;
+  }
+  .navbar .nav > li > a {
+    border-radius: 0;
   }
   .navbar .nav.pull-right {
     float: right;
@@ -3430,11 +3423,11 @@ button.close {
   }
 }
 .navbar-btn {
-  margin-top: 8px;
+  margin-top: 20px;
 }
 .navbar-text {
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 28px;
+  margin-bottom: 28px;
 }
 .navbar-link {
   color: #777777;
@@ -3626,7 +3619,7 @@ button.close {
 .pagination > li > span {
   float: left;
   padding: 4px 12px;
-  line-height: 1.428;
+  line-height: 1.428571429;
   text-decoration: none;
   background-color: #ffffff;
   border: 1px solid #dddddd;
@@ -3664,7 +3657,7 @@ button.close {
 }
 .pagination-large > li > a,
 .pagination-large > li > span {
-  padding: 11px 14px;
+  padding: 14px 16px;
   font-size: 18px;
 }
 .pagination-large > li:first-child > a,
@@ -3677,29 +3670,20 @@ button.close {
   border-bottom-right-radius: 6px;
   border-top-right-radius: 6px;
 }
-.pagination-mini > li:first-child > a,
-.pagination-mini > li:first-child > span,
+.pagination-small > li > a,
+.pagination-small > li > span {
+  padding: 5px 10px;
+  font-size: 12px;
+}
 .pagination-small > li:first-child > a,
 .pagination-small > li:first-child > span {
   border-bottom-left-radius: 3px;
   border-top-left-radius: 3px;
 }
-.pagination-mini > li:last-child > a,
-.pagination-mini > li:last-child > span,
 .pagination-small > li:last-child > a,
 .pagination-small > li:last-child > span {
   border-bottom-right-radius: 3px;
   border-top-right-radius: 3px;
-}
-.pagination-small > li > a,
-.pagination-small > li > span {
-  padding: 2px 10px;
-  font-size: 12px;
-}
-.pagination-mini > li > a,
-.pagination-mini > li > span {
-  padding: 0 6px;
-  font-size: 11px;
 }
 .pager {
   margin: 20px 0;
@@ -3821,14 +3805,14 @@ button.close {
 .modal-header {
   padding: 15px;
   border-bottom: 1px solid #e5e5e5;
-  min-height: 16.428px;
+  min-height: 16.428571429px;
 }
 .modal-header .close {
   margin-top: -2px;
 }
 .modal-title {
   margin: 0;
-  line-height: 1.428;
+  line-height: 1.428571429;
 }
 .modal-body {
   position: relative;
@@ -4089,8 +4073,7 @@ button.close {
 .alert hr {
   border-top-color: #f8e5be;
 }
-.alert > a,
-.alert > p > a {
+.alert .alert-link {
   font-weight: 500;
   color: #a47e3c;
 }
@@ -4108,8 +4091,7 @@ button.close {
 .alert-success hr {
   border-top-color: #c9e2b3;
 }
-.alert-success > a,
-.alert-success > p > a {
+.alert-success .alert-link {
   color: #356635;
 }
 .alert-danger {
@@ -4120,8 +4102,7 @@ button.close {
 .alert-danger hr {
   border-top-color: #e6c1c7;
 }
-.alert-danger > a,
-.alert-danger > p > a {
+.alert-danger .alert-link {
   color: #953b39;
 }
 .alert-info {
@@ -4132,8 +4113,7 @@ button.close {
 .alert-info hr {
   border-top-color: #a6e1ec;
 }
-.alert-info > a,
-.alert-info > p > a {
+.alert-info .alert-link {
   color: #2d6987;
 }
 .alert-block {
@@ -4150,7 +4130,7 @@ button.close {
 .thumbnail,
 .img-thumbnail {
   padding: 4px;
-  line-height: 1.428;
+  line-height: 1.428571429;
   background-color: #ffffff;
   border: 1px solid #dddddd;
   border-radius: 4px;
@@ -4546,7 +4526,7 @@ a.list-group-item.active > .badge,
   position: absolute;
   bottom: 20px;
   left: 50%;
-  z-index: 5;
+  z-index: 15;
   width: 100px;
   margin: 0 0 0 -50px;
   list-style: none;
@@ -4600,9 +4580,9 @@ a.list-group-item.active > .badge,
   margin-bottom: 30px;
   font-size: 21px;
   font-weight: 200;
-  line-height: 2.142;
+  line-height: 2.1428571435;
   color: #333333;
-  background-color: #EEEEEE;
+  background-color: #eeeeee;
 }
 .jumbotron h1 {
   line-height: 1;
@@ -4666,7 +4646,7 @@ a.list-group-item.active > .badge,
   visibility: hidden;
 }
 .visible-sm {
-  display: inherit !important;
+  display: block !important;
 }
 .visible-md {
   display: none !important;
@@ -4678,29 +4658,29 @@ a.list-group-item.active > .badge,
   display: none !important;
 }
 .hidden-md {
-  display: inherit !important;
+  display: block !important;
 }
 .hidden-lg {
-  display: inherit !important;
+  display: block !important;
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .visible-sm {
     display: none !important;
   }
   .visible-md {
-    display: inherit !important;
+    display: block !important;
   }
   .visible-lg {
     display: none !important;
   }
   .hidden-sm {
-    display: inherit !important;
+    display: block !important;
   }
   .hidden-md {
     display: none !important;
   }
   .hidden-lg {
-    display: inherit !important;
+    display: block !important;
   }
 }
 @media (min-width: 992px) {
@@ -4711,13 +4691,13 @@ a.list-group-item.active > .badge,
     display: none !important;
   }
   .visible-lg {
-    display: inherit !important;
+    display: block !important;
   }
   .hidden-sm {
-    display: inherit !important;
+    display: block !important;
   }
   .hidden-md {
-    display: inherit !important;
+    display: block !important;
   }
   .hidden-lg {
     display: none !important;
@@ -4728,7 +4708,7 @@ a.list-group-item.active > .badge,
 }
 @media print {
   .visible-print {
-    display: inherit !important;
+    display: block !important;
   }
   .hidden-print {
     display: none !important;
@@ -4835,11 +4815,11 @@ a.toggle-nav.black {
 }
 .button {
   display: inline-block;
-  padding: 6px 12px;
+  padding: 8px 12px;
   margin-bottom: 0;
   font-size: 14px;
   font-weight: 500;
-  line-height: 1.428;
+  line-height: 1.428571429;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
@@ -4946,19 +4926,20 @@ fieldset[disabled] .button.active {
 }
 #social-sharing .shareme .box {
   display: inline-block;
-  padding: 6px 12px;
+  padding: 8px 12px;
   margin-bottom: 0;
   font-size: 14px;
   font-weight: 500;
-  line-height: 1.428;
+  line-height: 1.428571429;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
   border: 1px solid transparent;
   border-radius: 4px;
   white-space: nowrap;
-  padding: 2px 10px;
+  padding: 5px 10px;
   font-size: 12px;
+  line-height: 1.5;
   border-radius: 3px;
   display: inline-block;
   position: relative;
